--- a/docs/schema/yaml/services/services.yaml
+++ b/docs/schema/yaml/services/services.yaml
@@ -4,11 +4,28 @@ type: array
 description: |
   # Services
 
-  TODO services introduction
+  In RODB, a service is an object through which the outputs are exposed to the outside world. Most commonly, it is a server.
+  Currently, the only type of service that is supported is HTTP, but more will come in the future.
+
+  It is possible to define multiple services in the same RODB instance.
 
   ### Example:
   ```yaml
-  TODO
+  services:
+    - name: service
+      type: http
+      http:
+        listen: ":80"
+      https:
+        listen: ":443"
+        certificatePath: "/etc/ssl/certs/example.crt"
+        privateKeyPath: "/etc/ssl/certs/example.key"
+      errorsType: application/json
+      routes:
+        - path: "/users"
+          output: usersList
+        - path: "/users/{id}"
+          output: singleUser
   ```
 items:
   anyOf:
