--- a/docs/schema/yaml/outputs/outputs.yaml
+++ b/docs/schema/yaml/outputs/outputs.yaml
@@ -3,12 +3,27 @@ $schema: http://json-schema.org/draft-07/schema#
 type: array
 description: |
   # Outputs
-
-  TODO outputs introduction
+  An output defines the output format of the data, how to search for it, and any relationship between it.
 
   ### Example:
   ```yaml
-  TODO
+  outputs:
+    - name: venuesList
+      type: jsonArray
+      input: venues
+      parameters:
+        city:
+          property: city
+          index: venueAddress
+          parser: string
+    - name: venue
+      type: jsonObject
+      input: venues
+      parameters:
+        id:
+          property: id
+          index: venueIds
+          parser: integer
   ```
 items:
   anyOf:
