--- a/docs/schema/yaml/inputs/json.yaml
+++ b/docs/schema/yaml/inputs/json.yaml
@@ -1,4 +1,33 @@
 $id: https://rodb.io/schema/yaml/inputs/json.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-description: TODO
+title: csv
+description: |
+  # JSON Input
+  A JSON input reads data from a file containing one JSON document per row.
+  Each CSV document translates in one record and must be an object.
+
+  Files containing a single JSON array of records are not supported.
+
+  ### Examples:
+  ```yaml
+  name: countries
+  type: json
+  path: ./countries.json
+  ```
+additionalProperties: false
+required:
+  - name
+  - type
+  - path
+properties:
+  name:
+    type: string
+    description: |
+      The name of this input, which any other component will use to refer to it.
+  type:
+    const: "json"
+  path:
+    $ref: "./definitions/path.yaml"
+  dieOnInputChange:
+    $ref: "./definitions/die-on-input-change.yaml"
