--- a/docs/schema/yaml/indexes/noop.yaml
+++ b/docs/schema/yaml/indexes/noop.yaml
@@ -1,4 +1,31 @@
 $id: https://rodb.io/schema/yaml/indexes/noop.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-description: TODO
+title: noop
+description: |
+  # NoOp index
+  This index does not actually index anything.
+  It iterates all the records of the data source to find records matching exactly the given filters.
+
+  The reason why it exists is that there is a default index called `default`.
+  This is the one used by default from the other layers when no index has been specified.
+
+  While it is possible to declare your own, it would be equivalent to the default one, because there are currently no available settings.
+
+  ### Default instance
+  A default instance of this index is already automatically created as such:
+  ```yaml
+  name: default
+  type: noop
+  ```
+additionalProperties: false
+required:
+  - name
+  - type
+properties:
+  name:
+    type: string
+    description: |
+      The name of this index, which any other component will use to refer to it.
+  type:
+    const: "noop"
