--- a/docs/schema/yaml/indexes/map.yaml
+++ b/docs/schema/yaml/indexes/map.yaml
@@ -8,7 +8,7 @@ description: |
   It is always created at startup and lost when RODB stops.
   It can only match strictly equal values (including strings).
 
-  While it is limited and can take significant amounts of memory, the advantages of the map index are that retrieving any records is extremely fast, and it's setup is easier, since it is stateless.
+  While it is limited and can take significant amounts of memory, the advantages of the map index are that retrieving any records is extremely fast, and it's setup is easier, since it does not need to store any file.
 
   ### Example:
   ```yaml
