--- a/docs/schema/yaml/parsers/string.yaml
+++ b/docs/schema/yaml/parsers/string.yaml
@@ -1,22 +1,21 @@
 $id: https://rodb.io/schema/yaml/parsers/string.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: string
+title: String
 description: |
-  # String parser
   This parser allows to operate some changes on a string.
 
   It is currently only useful if you need to read files with a non-unicode encoding.
   Otherwise, while it is possible to declare your own, it would be equivalent to the default one.
 
-  ### Example:
+  **Example:**
   ```yaml
   name: shiftJisString
   type: string
   convertFromCharset: "Shift_JIS"
   ```
 
-  ### Default instance
+  **Default instance**
   A default instance of this parser is already automatically created as such:
   ```yaml
   name: string
