--- a/docs/schema/yaml/indexes/fts5.yaml
+++ b/docs/schema/yaml/indexes/fts5.yaml
@@ -1,9 +1,8 @@
 $id: https://rodb.io/schema/yaml/indexes/fts5.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: fts5
+title: FTS5
 description: |
-  # FTS5 index
   This is a basic full-text index based on the FTS5 extension of SQLite.
 
   Contrarily to the other indexes, when using an fts5 index, the only available property to use from the output is `match`. The value of this property can be any fts5 query and is fully equivalent to the `MATCH` operator of SQLite/FTS5.
@@ -11,7 +10,7 @@ description: |
   You can find more information about the `match` syntax in the [SQLite's documentation](https://www.sqlite.org/fts5.html#full_text_query_syntax).
   The columns available in this query are the same than the list of properties in this index's configuration.
 
-  ### Example:
+  **Example:**
   ```yaml
   name: articles
   type: fts5
