--- a/docs/schema/yaml/indexes/indexes.yaml
+++ b/docs/schema/yaml/indexes/indexes.yaml
@@ -1,13 +1,14 @@
 $id: https://rodb.io/schema/yaml/indexes/indexes.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: array
+title: Indexes
 description: |
-  # Indexes
-
   An index allows RODB to retrieve specific records using given search criterias.
   Indexes are especially useful when handling large input data or specific search requirements (full-text search for example).
 
-  ### Example:
+  **Root config key:** `indexes`
+
+  **Example:**
   ```yaml
   indexes:
     - name: userId
@@ -29,12 +30,7 @@ items:
   type: object
   anyOf:
     - $ref: ./map.yaml
-      title: Map
     - $ref: ./sqlite.yaml
-      title: SQLite
     - $ref: ./fts5.yaml
-      title: FTS5
     - $ref: ./wildcard.yaml
-      title: Wildcard
     - $ref: ./noop.yaml
-      title: NoOp
