--- a/docs/schema/yaml/indexes/map.yaml
+++ b/docs/schema/yaml/indexes/map.yaml
@@ -1,16 +1,15 @@
 $id: https://rodb.io/schema/yaml/indexes/map.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: map
+title: Map
 description: |
-  # Map index
   The map index uses an in-memory map to index the data.
   It is always created at startup and lost when RODB stops.
   It can only match strictly equal values (including strings).
 
   While it is limited and can take significant amounts of memory, the advantages of the map index are that retrieving any records is extremely fast, and it's setup is easier, since it does not need to store any file.
 
-  ### Example:
+  **Example:**
   ```yaml
   name: posts
   type: map
