--- a/docs/schema/yaml/indexes/noop.yaml
+++ b/docs/schema/yaml/indexes/noop.yaml
@@ -1,9 +1,8 @@
 $id: https://rodb.io/schema/yaml/indexes/noop.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: noop
+title: NoOp
 description: |
-  # NoOp index
   This index does not actually index anything.
   It iterates all the records of the data source to find records matching exactly the given filters.
 
@@ -11,7 +10,7 @@ description: |
 
   While it is possible to declare your own, it would be equivalent to the default one, because there are currently no available settings.
 
-  ### Default instance
+  **Default instance**
   A default instance of this index is already automatically created as such:
   ```yaml
   name: default
