--- a/docs/schema/yaml/indexes/wildcard.yaml
+++ b/docs/schema/yaml/indexes/wildcard.yaml
@@ -1,9 +1,8 @@
 $id: https://rodb.io/schema/yaml/indexes/wildcard.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: wildcard
+title: Wildcard
 description: |
-  # Wildcard index
   This index is *experimental*.
 
   The wildcard index can only index strings. It allows to quickly match any substring in the indexed data.
@@ -13,7 +12,7 @@ description: |
 
   Internally, the wildcard uses a binary prefix-tree to index the data.
 
-  ### Example:
+  **Example:**
   ```yaml
   name: articleInfo
   type: wildcard
