--- a/docs/schema/yaml/inputs/inputs.yaml
+++ b/docs/schema/yaml/inputs/inputs.yaml
@@ -1,12 +1,14 @@
 $id: https://rodb.io/schema/yaml/inputs/inputs.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: array
+title: Inputs
 description: |
-  # Inputs
   An input defines the data source and format to be used in RODB.
   It also defines how to translate each record in the data source to an internal structure to be used in RODB.
 
-  ### Example:
+  **Root config key:** `inputs`
+
+  **Example:**
   ```yaml
   inputs:
     - name: cities
@@ -27,8 +29,5 @@ description: |
 items:
   anyOf:
     - $ref: ./csv.yaml
-      title: CSV
     - $ref: ./json.yaml
-      title: JSON
     - $ref: ./xml.yaml
-      title: XML
