--- a/docs/schema/yaml/inputs/xml.yaml
+++ b/docs/schema/yaml/inputs/xml.yaml
@@ -1,13 +1,12 @@
 $id: https://rodb.io/schema/yaml/inputs/xml.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: xml
+title: XML
 description: |
-  # XML Input
   An XML input reads data from an XML file. Each record or value inside the records is defined using XPath.
   This input provides several settings described below.
 
-  ### Example:
+  **Example:**
   ```yaml
   name: users
   type: xml
