--- a/docs/schema/yaml/parsers/json.yaml
+++ b/docs/schema/yaml/parsers/json.yaml
@@ -1,9 +1,8 @@
 $id: https://rodb.io/schema/yaml/parsers/json.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: object
-title: json
+title: JSON
 description: |
-  # JSON parser
   Parses a JSON value (string) to any type it contains (object, array...).
   (not to be confused with the JSON input parser)
 
@@ -11,13 +10,13 @@ description: |
 
   This parser is not a primitive parser, and thus cannot be used as a parameter in an output object.
 
-  ### Example:
+  **Example:**
   ```yaml
   name: customJson
   type: json
   ```
 
-  ### Default instance
+  **Default instance**
   A default instance of this parser is already automatically created as such:
   ```yaml
   name: json
