--- a/docs/schema/yaml/parsers/parsers.yaml
+++ b/docs/schema/yaml/parsers/parsers.yaml
@@ -1,9 +1,8 @@
 $id: https://rodb.io/schema/yaml/parsers/parsers.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: array
+title: Parsers
 description: |
-  # Parsers
-
   In RODB, a parser is an object that allows you to convert a string value into another data type.
   There are many kind of parsers described below.
 
@@ -13,7 +12,9 @@ description: |
 
   The parsers are used by the input (data) and output (user inputs) layers.
 
-  ### Example:
+  **Root config key:** `parsers`
+
+  **Example:**
   ```yaml
   parsers:
     - name: booleanYesNo
@@ -30,14 +31,8 @@ description: |
 items:
   anyOf:
     - $ref: ./integer.yaml
-      title: Integer
     - $ref: ./float.yaml
-      title: Float
     - $ref: ./boolean.yaml
-      title: Boolean
     - $ref: ./string.yaml
-      title: String
     - $ref: ./split.yaml
-      title: Split
     - $ref: ./json.yaml
-      title: JSON
