--- a/docs/schema/yaml/services/services.yaml
+++ b/docs/schema/yaml/services/services.yaml
@@ -1,15 +1,16 @@
 $id: https://rodb.io/schema/yaml/services/services.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: array
+title: Services
 description: |
-  # Services
-
   In RODB, a service is an object through which the outputs are exposed to the outside world. Most commonly, it is a server.
   Currently, the only type of service that is supported is HTTP, but more will come in the future.
 
   It is possible to define multiple services in the same RODB instance.
 
-  ### Example:
+  **Root config key:** `services`
+
+  **Example:**
   ```yaml
   services:
     - name: service
@@ -30,4 +31,3 @@ description: |
 items:
   anyOf:
     - $ref: ./http.yaml
-      title: HTTP
